--- a/backend copy/.env
+++ b/backend copy/.env
@@ -1,2 +1,3 @@
+# MongoDB URI to connect to cluster
 MONGO_URI=mongodb+srv://Isaac1123:spacegame123@cluster0.jk3mdao.mongodb.net/spacegame?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
